...
                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="Yxw-nM-aGc">
                                                        <rect key="frame" x="0.0" y="24.5" width="378" height="124"/>
                                                        <subviews>
                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C82-7e-RMl" customClass="DesignableView" customModule="qrcodeStuff" customModuleProvider="target">
                                                                <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TJO-rO-Fgo">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
                                                                        <constraints>
                                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="8y1-Aj-9W8"/>
                                                                            <constraint firstAttribute="height" constant="50" id="Dmu-lW-EiX"/>
                                                                        </constraints>
...
                                                                    </userDefinedRuntimeAttribute>
                                                                </userDefinedRuntimeAttributes>
                                                            </view>
                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAK-ta-vic" customClass="DesignableView" customModule="qrcodeStuff" customModuleProvider="target">
                                                                <rect key="frame" x="0.0" y="74" width="378" height="50"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="29b-Bs-ZbV">
                                                                        <rect key="frame" x="0.0" y="0.0" width="378" height="50"/>
                                                                        <color key="tintColor" systemColor="systemGreenColor"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                                    </textField>
                                                                </subviews>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2b-Ys-odV">
                                                <rect key="frame" x="0.0" y="256.5" width="378" height="50"/>
                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="ezw-co-6Em"/>
                                                </constraints>
                                                <state key="normal" title="Continue">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <integer key="value" value="25"/>
                                                    </userDefinedRuntimeAttribute>
...
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5n-ul-boh">
                                <rect key="frame" x="143" y="725" width="128" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Continue to Profile">
                                    <color key="titleColor" systemColor="systemGreenColor"/>
                                </state>
                                <connections>
                                    <action selector="buttonTapped:" destination="i6z-6h-kDS" eventType="touchUpInside" id="9oP-fM-yQ1"/>
                                </connections>
                            </button>
...
